--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Марки.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Марки.Designer.cs">
+      <DependentUpon>Марки.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Переименование страны.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,12 @@
     <Compile Include="Forms\Меню.Designer.cs">
       <DependentUpon>Меню.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Модели.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Модели.Designer.cs">
+      <DependentUpon>Модели.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\Поставщики.cs">
@@ -134,6 +146,24 @@
     <Compile Include="Forms\Переименование улицы.Designer.cs">
       <DependentUpon>Переименование улицы.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Переименование марки.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Переименование марки.Designer.cs">
+      <DependentUpon>Переименование марки.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Переименование модели.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Переименование модели.Designer.cs">
+      <DependentUpon>Переименование модели.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Forms\Модели.resx">
+      <DependentUpon>Модели.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Марки.resx">
+      <DependentUpon>Марки.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Переименование страны.resx">
       <DependentUpon>Переименование страны.cs</DependentUpon>
     </EmbeddedResource>
@@ -178,6 +208,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Переименование улицы.resx">
       <DependentUpon>Переименование улицы.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Переименование марки.resx">
+      <DependentUpon>Переименование марки.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Переименование модели.resx">
+      <DependentUpon>Переименование модели.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
