--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Распределение.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Распределение.Designer.cs">
+      <DependentUpon>Распределение.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Отделы магазина.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Распределение.resx">
+      <DependentUpon>Распределение.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Отделы магазина.resx">
       <DependentUpon>Отделы магазина.cs</DependentUpon>
     </EmbeddedResource>
