--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -54,6 +54,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="О программе.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="О программе.Designer.cs">
+      <DependentUpon>О программе.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Меню кладовщика.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Меню кладовщика.Designer.cs">
+      <DependentUpon>Меню кладовщика.cs</DependentUpon>
+    </Compile>
     <Compile Include="Добавление и редактирование продажи.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,8 +250,14 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="О программе.resx">
+      <DependentUpon>О программе.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Добавление и редактирование продажи.resx">
       <DependentUpon>Добавление и редактирование продажи.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Меню кладовщика.resx">
+      <DependentUpon>Меню кладовщика.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Продажа.resx">
       <DependentUpon>Продажа.cs</DependentUpon>
@@ -309,6 +327,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Forms\Поставщики.resx">
       <DependentUpon>Поставщики.cs</DependentUpon>
@@ -347,6 +366,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\internet-magazin-avtozapchastej-autodocru-otzyvy-1552723225.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
