--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -54,28 +54,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddingAndEditingAvailabilityOfAutoParts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddingAndEditingAvailabilityOfAutoParts.Designer.cs">
+      <DependentUpon>AddingAndEditingAvailabilityOfAutoParts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\О программе.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\О программе.Designer.cs">
       <DependentUpon>О программе.cs</DependentUpon>
     </Compile>
-    <Compile Include="Меню кладовщика.cs">
+    <Compile Include="Forms\Меню кладовщика.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Меню кладовщика.Designer.cs">
+    <Compile Include="Forms\Меню кладовщика.Designer.cs">
       <DependentUpon>Меню кладовщика.cs</DependentUpon>
     </Compile>
-    <Compile Include="Добавление и редактирование продажи.cs">
+    <Compile Include="Forms\Добавление и редактирование продажи.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Добавление и редактирование продажи.Designer.cs">
+    <Compile Include="Forms\Добавление и редактирование продажи.Designer.cs">
       <DependentUpon>Добавление и редактирование продажи.cs</DependentUpon>
     </Compile>
-    <Compile Include="Продажа.cs">
+    <Compile Include="Forms\Продажа.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Продажа.Designer.cs">
+    <Compile Include="Forms\Продажа.Designer.cs">
       <DependentUpon>Продажа.cs</DependentUpon>
     </Compile>
     <Compile Include="Автозапчасти в магазине.cs">
@@ -250,16 +256,19 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddingAndEditingAvailabilityOfAutoParts.resx">
+      <DependentUpon>AddingAndEditingAvailabilityOfAutoParts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\О программе.resx">
       <DependentUpon>О программе.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Добавление и редактирование продажи.resx">
+    <EmbeddedResource Include="Forms\Добавление и редактирование продажи.resx">
       <DependentUpon>Добавление и редактирование продажи.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Меню кладовщика.resx">
+    <EmbeddedResource Include="Forms\Меню кладовщика.resx">
       <DependentUpon>Меню кладовщика.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Продажа.resx">
+    <EmbeddedResource Include="Forms\Продажа.resx">
       <DependentUpon>Продажа.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Автозапчасти в магазине.resx">
