--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -54,11 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddingAndEditingAvailabilityOfAutoParts.cs">
+    <Compile Include="Распределение и редактирование  автозапчасти в магазине.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddingAndEditingAvailabilityOfAutoParts.Designer.cs">
-      <DependentUpon>AddingAndEditingAvailabilityOfAutoParts.cs</DependentUpon>
+    <Compile Include="Распределение и редактирование  автозапчасти в магазине.Designer.cs">
+      <DependentUpon>Распределение и редактирование  автозапчасти в магазине.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\О программе.cs">
       <SubType>Form</SubType>
@@ -256,8 +256,8 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddingAndEditingAvailabilityOfAutoParts.resx">
-      <DependentUpon>AddingAndEditingAvailabilityOfAutoParts.cs</DependentUpon>
+    <EmbeddedResource Include="Распределение и редактирование  автозапчасти в магазине.resx">
+      <DependentUpon>Распределение и редактирование  автозапчасти в магазине.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\О программе.resx">
       <DependentUpon>О программе.cs</DependentUpon>
