--- a/AS Autodoc.csproj
+++ b/AS Autodoc.csproj
@@ -54,10 +54,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Распределение и редактирование  автозапчасти в магазине.cs">
+    <Compile Include="Меню директора.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Распределение и редактирование  автозапчасти в магазине.Designer.cs">
+    <Compile Include="Меню директора.Designer.cs">
+      <DependentUpon>Меню директора.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Меню продавца.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Меню продавца.Designer.cs">
+      <DependentUpon>Меню продавца.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Распределение и редактирование  автозапчасти в магазине.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Распределение и редактирование  автозапчасти в магазине.Designer.cs">
       <DependentUpon>Распределение и редактирование  автозапчасти в магазине.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\О программе.cs">
@@ -84,10 +96,10 @@
     <Compile Include="Forms\Продажа.Designer.cs">
       <DependentUpon>Продажа.cs</DependentUpon>
     </Compile>
-    <Compile Include="Автозапчасти в магазине.cs">
+    <Compile Include="Forms\Автозапчасти в магазине.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Автозапчасти в магазине.Designer.cs">
+    <Compile Include="Forms\Автозапчасти в магазине.Designer.cs">
       <DependentUpon>Автозапчасти в магазине.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Редактирование производителя.cs">
@@ -256,7 +268,13 @@
     <Compile Include="Forms\Редактирование отдела.Designer.cs">
       <DependentUpon>Редактирование отдела.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Распределение и редактирование  автозапчасти в магазине.resx">
+    <EmbeddedResource Include="Меню директора.resx">
+      <DependentUpon>Меню директора.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Меню продавца.resx">
+      <DependentUpon>Меню продавца.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Распределение и редактирование  автозапчасти в магазине.resx">
       <DependentUpon>Распределение и редактирование  автозапчасти в магазине.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\О программе.resx">
@@ -271,7 +289,7 @@
     <EmbeddedResource Include="Forms\Продажа.resx">
       <DependentUpon>Продажа.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Автозапчасти в магазине.resx">
+    <EmbeddedResource Include="Forms\Автозапчасти в магазине.resx">
       <DependentUpon>Автозапчасти в магазине.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Редактирование производителя.resx">
