--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GithubNET" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1404.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
 </packages>
